Exercicios/exercicio05-ANTLR-Teste-01-simples/parserAUX/Lang.g4
grammar Lang;
@parser::header
{
package parserAUX;
}
@lexer::header
{
package parserAUX;
}				
prog:	(expr NEWLINE)* ;
expr:	expr ('*'|'/') expr
    |	expr ('+'|'-') expr
    |	INT
    |	'(' expr ')'
    ;
NEWLINE : [\r\n]+ ;
INT     : [0-9]+ ;
